# doppelkopf

./: AI.cpp  AI.hpp  CMakeLists.txt  Card.cpp  Card.hpp  GameWindow.cpp  GameWindow.hpp  MaxNTreeNode.cpp  MaxNTreeNode.hpp  Player.cpp  Player.hpp  WindowSettings.hpp  main.cpp
